--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,8 +2,8 @@
 
 ///////////////////////////////////////////////////////////////////////////////
 
+@import 'jquery-ui';
 @import 'bootstrap';
-// @import 'bootswatch';
-// @import 'variables';
+
 
 ///////////////////////////////////////////////////////////////////////////////
