--- a/app/views/application/_flashes.html.erb
+++ b/app/views/application/_flashes.html.erb
@@ -1,5 +1,8 @@
 <div id="flash">
   <% flash.each do |key, value| -%>
-    <div id="flash_<%= key %>"><%= value %></div>
+    <div class="alert alert-dismissable alert-info">
+      <button type="button" class="close" data-dismiss="alert">×</button>
+      <%= value %>
+    </div>
   <% end -%>
 </div>
