--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
       <div class="navbar-collapse collapse" id="navbar-main">
         <ul class="nav navbar-nav">
           <li>
-            <a href="../help/">Games</a>
+            <%= link_to "Games", games_path %>
           </li>
           <li>
             <a href="http://news.bootswatch.com">Tournaments</a>
@@ -32,8 +32,7 @@
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="http://builtwithbootstrap.com/" target="_blank">Built With Bootstrap</a></li>
-          <li><a href="https://wrapbootstrap.com/?ref=bsw" target="_blank">WrapBootstrap</a></li>
+          <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
         </ul>
 
       </div>
